# ipodsync

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ipodsync/: __init__.py  __main__.py  _art_templates.py  _hashab_gen.py  _hashab_gen2.py  _hashab_gen_rt.py  _hashab_py.py  _hashab_tables.py  _lib_templates.py  artwork_writer.py  cbk.py  cli.py  export.py  hashab.py  importer.py  library.py  models.py  sysinfo.py  transport.py
tests/: test_artwork_compact.py  test_artwork_writer.py  test_cbk.py  test_gc_orphans.py  test_hashab.py  test_hashab_port.py
tests/data/: ArtworkDB  Locations.itdb  Locations.itdb.cbk  hashab-traces.json  hashab-vectors.json
tools/: build_gen2.py  gen_art_templates.py  gen_hashab_tables.py  gen_lib_templates.py  transpile_hashab.py
